export const snapshot = {};

snapshot[`object 1`] = `
{
  additionalProperties: false,
  description: "",
  properties: {
    a: {
      description: "",
      type: "boolean",
    },
    b: {
      description: "",
      type: "number",
    },
    c: {
      description: "",
      type: "string",
    },
  },
  required: [
    "a",
    "b",
    "c",
  ],
  type: "object",
}
`;

snapshot[`object 2`] = `
{
  additionalProperties: false,
  description: "Description one.",
  properties: {
    a: {
      description: "",
      type: "boolean",
    },
    b: {
      description: "",
      type: "number",
    },
    c: {
      description: "",
      type: "string",
    },
  },
  required: [
    "a",
    "b",
    "c",
  ],
  type: "object",
}
`;

snapshot[`object 3`] = `
{
  additionalProperties: false,
  description: "Description two. Description one.",
  properties: {
    a: {
      description: "",
      type: "boolean",
    },
    b: {
      description: "",
      type: "number",
    },
    c: {
      description: "",
      type: "string",
    },
  },
  required: [
    "a",
    "b",
    "c",
  ],
  type: "object",
}
`;
